# cvxpylayers

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  claude-review.yml
cvxpylayers/interfaces/: __init__.py  mpax_if.py
cvxpylayers/torch/: cvxpylayers.py
cvxpylayers/utils/: parse_args.py
docs/: Makefile  conf.py  index.md  installation.md  quickstart.md
docs/_static/: custom.css
docs/api/: index.rst  jax.rst  mlx.rst  torch.rst
docs/examples/: index.md  torch_example.md
docs/guide/: basic-usage.md  batching.md  dual-variables.md  geometric-programs.md  index.md  solvers.md
examples/torch/: Portfolio optimization with vix.ipynb
examples/torch/cocp/: lqr.ipynb  markowitz_tuning.ipynb  vehicle.ipynb
src/cvxpylayers/: __init__.py  _quad_form_dpp.py
src/cvxpylayers/interfaces/: __init__.py  cuclarabel_if.py  diffcp_if.py  moreau_if.py  mpax_if.py
src/cvxpylayers/jax/: cvxpylayer.py
src/cvxpylayers/mlx/: cvxpylayer.py
src/cvxpylayers/torch/: cvxpylayer.py
src/cvxpylayers/utils/: dgp_reduction.py  parse_args.py
tests/: ruff.toml  test_cuclarabel.py  test_import_isolation.py  test_jax.py  test_mlx.py  test_moreau.py  test_moreau_dual_variables.py  test_mpax.py  test_parse_args.py  test_readme_examples.py  test_scratch.py  test_torch.py
